src/objects/ServiceCloudCaseFlowConfig__mdt.object
<CustomObject>
    <description>Case Flow configuration attributes</description>
    <fields>
        <fullName>AccountCountry__c</fullName>
        <description>Two Characters country code. Combining countries is OK but each country must have only 1 record.</description>
        <label>Account Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Full Credit Process</description>
        <label>Credit Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomAttribute_1__c</fullName>
        <description>Text field can be used to pass additional attributes to be used as criteria or filters in the flow.</description>
        <label>Custom Attribute 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectorApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Director Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExcludedCountries__c</fullName>
        <description>Two Characters country code separated with semicolons</description>
        <label>Excluded Countries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludedCountries__c</fullName>
        <description>Two Characters country code separated with semicolons</description>
        <label>Included Countries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitCloneCase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Countries with Return and Credit Process can&apos;t clone cases with these types</description>
        <label>Limit Clone Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManagerApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManualApprovalSelection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow users to select manually the approval steps</description>
        <label>Manual Approval Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReturnProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Full return process</description>
        <label>Return Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesRepApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SalesRep Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalCreditReturnField__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The total amount without depending on the Articles records</description>
        <label>Total Credit/Return Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserCountry__c</fullName>
        <description>Additional Dimension for the country from the user perspective</description>
        <label>User Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Service Cloud: Case Flow Config</label>
    <pluralLabel>Service Cloud: Case Flow Configs</pluralLabel>
</CustomObject>